--- a/package.json
+++ b/package.json
@@ -9,118 +9,119 @@
   "version": "1.0.0",
   "main": "app.js",
   "dependencies": {
+    "@vue/compiler-sfc": "^3.2.8",
     "acorn": "^7.4.1",
     "acorn-node": "^1.8.2",
     "acorn-walk": "^7.2.0",
     "ansi-styles": "^4.3.0",
-    "binary-extensions": "^2.2.0",
     "anymatch": "^3.1.2",
     "arg": "^5.0.1",
-    "browserslist": "^4.16.8",
     "balanced-match": "^1.0.2",
-    "braces": "^3.0.2",
-    "callsites": "^3.1.0",
-    "color": "^4.0.1",
-    "chokidar": "^3.5.2",
+    "binary-extensions": "^2.2.0",
     "brace-expansion": "^1.1.11",
+    "braces": "^3.0.2",
+    "browserslist": "^4.16.8",
+    "bytes": "^3.1.0",
+    "callsites": "^3.1.0",
     "camelcase-css": "^2.0.1",
     "caniuse-lite": "^1.0.30001252",
-    "color-name": "^1.1.4",
     "chalk": "^4.1.2",
-    "bytes": "^3.1.0",
-    "color-string": "^1.6.0",
+    "chokidar": "^3.5.2",
+    "color": "^4.0.1",
     "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "color-string": "^1.6.0",
     "colorette": "^1.3.0",
-    "defined": "^1.0.0",
-    "css-unit-converter": "^1.1.2",
-    "cosmiconfig": "^7.0.1",
-    "didyoumean": "^1.2.2",
     "commander": "^6.2.1",
     "concat-map": "^0.0.1",
-    "electron-to-chromium": "^1.3.830",
-    "detective": "^5.2.0",
+    "cosmiconfig": "^7.0.1",
+    "css-unit-converter": "^1.1.2",
     "cssesc": "^3.0.0",
-    "esbuild": "^0.12.25",
+    "defined": "^1.0.0",
+    "detective": "^5.2.0",
+    "didyoumean": "^1.2.2",
     "dlv": "^1.1.3",
+    "electron-to-chromium": "^1.3.830",
     "error-ex": "^1.3.2",
+    "esbuild": "^0.12.25",
     "escalade": "^3.1.1",
     "escape-string-regexp": "^1.0.5",
-    "fastq": "^1.12.0",
-    "fraction.js": "^4.1.1",
-    "fill-range": "^7.0.1",
     "fast-glob": "^3.2.7",
-    "fs.realpath": "^1.0.0",
+    "fastq": "^1.12.0",
+    "fill-range": "^7.0.1",
+    "fraction.js": "^4.1.1",
     "fs-extra": "^10.0.0",
+    "fs.realpath": "^1.0.0",
     "function-bind": "^1.1.1",
+    "glob": "^7.1.7",
+    "glob-parent": "^6.0.1",
     "graceful-fs": "^4.2.8",
     "has": "^1.0.3",
-    "glob-parent": "^6.0.1",
     "has-flag": "^4.0.0",
-    "import-cwd": "^3.0.0",
     "html-tags": "^3.1.0",
-    "glob": "^7.1.7",
-    "is-binary-path": "^2.1.0",
-    "inflight": "^1.0.6",
-    "import-from": "^3.0.0",
-    "inherits": "^2.0.4",
+    "import-cwd": "^3.0.0",
     "import-fresh": "^3.3.0",
+    "import-from": "^3.0.0",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "is-arrayish": "^0.2.1",
+    "is-binary-path": "^2.1.0",
     "is-core-module": "^2.6.0",
     "is-extglob": "^2.1.1",
-    "is-arrayish": "^0.2.1",
     "is-glob": "^4.0.1",
+    "is-number": "^7.0.0",
     "js-tokens": "^4.0.0",
     "json-parse-even-better-errors": "^2.3.1",
-    "lodash": "^4.17.21",
     "jsonfile": "^6.1.0",
-    "lines-and-columns": "^1.1.6",
     "lilconfig": "^2.0.3",
-    "is-number": "^7.0.0",
+    "lines-and-columns": "^1.1.6",
+    "lodash": "^4.17.21",
     "lodash.topath": "^4.5.2",
-    "minimist": "^1.2.5",
-    "micromatch": "^4.0.4",
     "merge2": "^1.4.1",
+    "micromatch": "^4.0.4",
     "minimatch": "^3.0.4",
-    "node-releases": "^1.1.75",
+    "minimist": "^1.2.5",
     "modern-normalize": "^1.1.0",
-    "object-hash": "^2.2.0",
     "nanoid": "^3.1.25",
     "node-emoji": "^1.11.0",
+    "node-releases": "^1.1.75",
+    "normalize-path": "^3.0.0",
+    "normalize-range": "^0.1.2",
+    "object-hash": "^2.2.0",
     "once": "^1.4.0",
     "parent-module": "^1.0.1",
-    "path-parse": "^1.0.7",
-    "normalize-range": "^0.1.2",
-    "normalize-path": "^3.0.0",
-    "path-is-absolute": "^1.0.1",
     "parse-json": "^5.2.0",
+    "path-is-absolute": "^1.0.1",
+    "path-parse": "^1.0.7",
+    "path-type": "^4.0.0",
     "picomatch": "^2.3.0",
     "postcss-js": "^3.0.3",
-    "postcss-nested": "^5.0.6",
     "postcss-load-config": "^3.1.0",
-    "path-type": "^4.0.0",
+    "postcss-nested": "^5.0.6",
     "postcss-selector-parser": "^6.0.6",
-    "pretty-hrtime": "^1.0.3",
     "postcss-value-parser": "^4.1.0",
+    "pretty-hrtime": "^1.0.3",
     "purgecss": "^4.0.3",
-    "readdirp": "^3.6.0",
     "queue-microtask": "^1.2.3",
-    "reduce-css-calc": "^2.1.8",
-    "resolve-from": "^4.0.0",
     "quick-lru": "^5.1.1",
+    "readdirp": "^3.6.0",
+    "reduce-css-calc": "^2.1.8",
+    "resolve": "^1.20.0",
+    "resolve-from": "^4.0.0",
+    "reusify": "^1.0.4",
+    "rimraf": "^3.0.2",
     "rollup": "^2.56.3",
     "run-parallel": "^1.2.0",
-    "reusify": "^1.0.4",
-    "resolve": "^1.20.0",
-    "rimraf": "^3.0.2",
     "simple-swizzle": "^0.2.2",
     "source-map-js": "^0.6.2",
+    "supports-color": "^7.2.0",
     "tmp": "^0.2.1",
+    "to-regex-range": "^5.0.1",
+    "universalify": "^2.0.0",
     "util-deprecate": "^1.0.2",
     "wrappy": "^1.0.2",
-    "universalify": "^2.0.0",
-    "to-regex-range": "^5.0.1",
-    "supports-color": "^7.2.0",
-    "yaml": "^1.10.2",
-    "xtend": "^4.0.2"
+    "xtend": "^4.0.2",
+    "yaml": "^1.10.2"
   },
   "scripts": {
     "dev": "vite"
